force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>Custom object for tracking job applications</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>Job App Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>