force-app/main/default/objects/Job_Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>The application&apos;s current status</description>
    <inlineHelpText>The application&apos;s current status</inlineHelpText>
    <label>Application Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Status</valueSetName>
    </valueSet>
</CustomField>