force-app/main/default/objects/Job_Application__c/fields/Closed_by_Automated_Process__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_Automated_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The indicator that the application was closed by an automated process</description>
    <inlineHelpText>The indicator that the application was closed by an automated process</inlineHelpText>
    <label>Closed by Automated Process</label>
    <type>Checkbox</type>
</CustomField>