force-app/main/default/objects/Job_Application__c/fields/Expected_Salary__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary__c</fullName>
    <description>The applicant&apos;s desired salary for the position</description>
    <inlineHelpText>The applicant&apos;s desired salary for the position</inlineHelpText>
    <label>Expected Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>