force-app/main/default/objects/Job_Application__c/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <description>The date on which to follow-up on the job application in some manner; for example, to contact the main point of contact</description>
    <inlineHelpText>The date on which to follow-up on the job application in some manner; for example, to contact the main point of contact</inlineHelpText>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>