force-app/main/default/objects/Job_Application__c/fields/Geographic_Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Job_Location__c</fullName>
    <description>The geographic location of the jobsite, reflected from the position</description>
    <formula>Position__r.Geographic_Job_Location__c</formula>
    <inlineHelpText>The geographic location of the jobsite, reflected from the position</inlineHelpText>
    <label>Geographic Job Location</label>
    <type>Text</type>
</CustomField>