force-app/main/default/objects/Job_Application__c/fields/How_Paid__c.field-meta.xml
<CustomField>
    <fullName>How_Paid__c</fullName>
    <description>How the employee for the position is to be paid</description>
    <inlineHelpText>How the employee for the position is to be paid</inlineHelpText>
    <label>How Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>How_Paid</valueSetName>
    </valueSet>
</CustomField>