force-app/main/default/objects/Job_Application__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>The detailed job description, copied from the position description but allows for editing and additions.</description>
    <inlineHelpText>The detailed job description, copied from the position description but allows for editing and additions.</inlineHelpText>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>