force-app/main/default/objects/Job_Application__c/fields/Job_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Link__c</fullName>
    <description>The link to the position description, if the job came from the Web. Inherited from Position</description>
    <formula>Position__r.Position_Link__c</formula>
    <inlineHelpText>The link to the position description, if the job came from the Web. Inherited from Position</inlineHelpText>
    <label>Job Link</label>
    <type>Text</type>
</CustomField>