force-app/main/default/objects/Job_Application__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <description>The location of the position</description>
    <formula>TEXT(Position__r.Job_Location__c)</formula>
    <inlineHelpText>The location of the position</inlineHelpText>
    <label>Job Location</label>
    <type>Text</type>
</CustomField>