force-app/main/default/objects/Job_Application__c/fields/Position_Rating__c.field-meta.xml
<CustomField>
    <fullName>Position_Rating__c</fullName>
    <description>The applicant&apos;s rating of the attractiveness of the potential position, with 5 being the highest and 1 being the lowest</description>
    <inlineHelpText>The applicant&apos;s rating of the attractiveness of the potential position, with 5 being the highest and 1 being the lowest</inlineHelpText>
    <label>Position Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Numeric_Rating</valueSetName>
    </valueSet>
</CustomField>