force-app/main/default/objects/Job_Application__c/fields/Position_Reported_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Position_Reported_Last_Updated__c</fullName>
    <description>The date and time on which the position was last updated by the system, site, or board on which it was posted.</description>
    <inlineHelpText>The date and time on which the position was last updated by the system, site, or board on which it was posted.</inlineHelpText>
    <label>Position Reported Last Updated</label>
    <type>DateTime</type>
</CustomField>