force-app/main/default/objects/Job_Application__c/fields/Position_Status__c.field-meta.xml
<CustomField>
    <fullName>Position_Status__c</fullName>
    <description>The status of the position, indicating if it is open or filled</description>
    <formula>TEXT(Position__r.Position_Status__c)</formula>
    <inlineHelpText>The status of the position, indicating if it is open or filled</inlineHelpText>
    <label>Position Status</label>
    <type>Text</type>
</CustomField>