force-app/main/default/objects/Job_Application__c/fields/Position_Title__c.field-meta.xml
<CustomField>
    <fullName>Position_Title__c</fullName>
    <description>The title of the position for which the applicant is applying</description>
    <formula>Position__r.Title__c</formula>
    <inlineHelpText>The title of the position for which the applicant is applying</inlineHelpText>
    <label>Position Title</label>
    <type>Text</type>
</CustomField>