force-app/main/default/objects/Job_Application__c/fields/Position_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Type__c</fullName>
    <description>The employee type required by the position</description>
    <formula>TEXT(Position__r.Time_Type__c )</formula>
    <inlineHelpText>The employee type required by the position</inlineHelpText>
    <label>Position Type</label>
    <type>Text</type>
</CustomField>