force-app/main/default/objects/Job_Application__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary contact for the job application</description>
    <inlineHelpText>The primary contact for the job application</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Applications (PoC)</relationshipLabel>
    <relationshipName>Job_Application_PC</relationshipName>
    <type>Lookup</type>
</CustomField>