force-app/main/default/objects/Job_Application__c/fields/Task_for_Stage_Completed__c.field-meta.xml
<CustomField>
    <fullName>Task_for_Stage_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task for Stage Completed</label>
    <type>Checkbox</type>
</CustomField>