force-app/main/default/objects/Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Applicant__c</columns>
    <columns>Position_Type__c</columns>
    <columns>Position_Title__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Geographic_Job_Location__c</columns>
    <columns>Interest_Rating__c</columns>
    <columns>Salary__c</columns>
    <columns>How_Paid__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>